# rpi-cm4-experiments

./: README.md
FrameBufferJavaTest/: README.md
FrameBufferJavaTest/c/: CMakeLists.txt  README.md
FrameBufferJavaTest/java/: README.md  build.gradle  settings.gradle
JavaExperiments/: README.md
JavaExperiments/c/: CMakeLists.txt  README.md
JavaExperiments/java/: README.md  build.gradle
LRAHapticsJavaTest/: README.md  build.gradle  settings.gradle
LRAHapticsJavaTest/c/: CMakeLists.txt  README.md
LRAHapticsJavaTest/c/scripts/: generate_jni_headers.sh  rsync_to_rpi_cm4.sh
LRAHapticsJavaTest/c/src/jni/: tech_anapad_rpicm4experiments_jni_JNIFunctions.c  tech_anapad_rpicm4experiments_jni_JNIFunctions.h
LRAHapticsJavaTest/c/src/util/i2c/: i2c.c  i2c.h
LRAHapticsJavaTest/c/src/util/lang/: lang.h
LRAHapticsJavaTest/c/src/util/number/: get_set_bits.h
LRAHapticsJavaTest/java/: .gitignore  README.md  build.gradle
LRAHapticsJavaTest/scripts/: rsync_to_rpi_cm4.sh
TouchscreenVisualizerHost/: README.md  main.c
USBTrackpad/: .clang-format  CMakeLists.txt  README.md  format_source.sh
USBTrackpad/assets/: gt9110_orginal_configuration.txt
USBTrackpad/scripts/: format_source.sh  rsync_to_rpi_cm4.sh
USBTrackpad/src/: gt9110_config.c  gt9110_config.h  main.c
USBTrackpad/src/util/file/: file.c  file.h
USBTrackpad/src/util/i2c/: i2c.c  i2c.h
USBTrackpad/src/util/lang/: lang.h
USBTrackpad/src/util/number/: get_set_bits.h  number_util.h
USBTrackpadJava/: README.md
USBTrackpadJava/c/: .clang-format  CMakeLists.txt  (+1 more)
i2c/: get_set_bits.h  i2c.c
(+47 files in other folders)
